--- a/.editorconfig
+++ b/.editorconfig
@@ -11,3 +11,7 @@ indent_size = 4
 indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
+
+# make yaml files to indent with 2 spaces
+[*.{yml,yaml}]
+indent_size = 2
